# avalon

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  Makefile  Procfile  README.md  WORKSPACE.bazel  go.mod  main.go  players.txt
assets/: index.html
assets/scripts/: avalon.js  avalon_button.js  avalon_card.js  avalon_errors.js  avalon_image.js  avalon_menu.js  avalon_quest.js  avalon_room_waiting.js  avalon_table.js  avalon_team_discussion.js  avalon_text.js  card.js  index.js
docs/: design.md
internal/: avalon.go  avalon_server.go  character.go  jsend.go  loyal_servant.go  minion.go  room.go
internal/domain/avalon/: BUILD.bazel  avalon.go  character.go  player.go
internal/domain/metrics/: BUILD.bazel  metrics.go
internal/domain/room/: BUILD.bazel  room.go
internal/domain/server/: room.go  state.go
internal/domain/state/: BUILD.bazel  state.go
internal/server/: BUILD.bazel  jsend.go  room.go  server.go
internal/server/handlers/: BUILD.bazel  avalon_handler.go  jsend.go  metrics_handler.go  rooms_handler.go
internal/server/jsend/: BUILD.bazel  jsend.go
internal/server/logger/: BUILD.bazel  logger.go
tests/server/: BUILD.bazel  server_test.go
tests/server/handlers/: BUILD.bazel  jsend_test.go
