load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/damontic/avalon
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "avalon_lib",
    srcs = ["main.go"],
    importpath = "github.com/damontic/avalon",
    visibility = ["//visibility:private"],
    deps = ["//internal/server"],
)

go_binary(
    name = "avalon",
    embed = [":avalon_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "avalon_package",
    extension = "tar.gz",
    srcs = [
        ":avalon",
        "assets",
    ],
)
