load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/damontic/avalon/internal/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain/room",
        "//internal/domain/state",
        "//internal/server/handlers",
        "//internal/server/logger",
    ],
)
